<resources>
    <string name="app_name">GassiShare</string>
    <string name="title_home">Heimat</string>
    <string name="title_chat">Chat</string>
    <string name="title_login">Anmeldung</string>
    <string name="title_profile">Profil</string>
    <string name="title_person">Person</string>
    <string name="title_dog">Hund</string>
    <string name="title_animals">Meine Hunde</string>
    <string name="login">Anmeldung</string>
    <string name="benutzername">Benutzername</string>
    <string name="passwort">Passwort</string>
    <string name="name_eingeben">Name eingeben...</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_settings">Settings</string>
    <string name="hint_animals">Animals…</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">Animal not saved because it is empty.</string>
    <string name="add_animal">Add Animal</string>

</resources>